        Reviewed by Oliver.

http://bugs.webkit.org/show_bug.cgi?id=11726
        SVG Image do not take into account clip/overflow when hit testing

        Take into account the overflowRect when hit-testing <svg> container.



Canonical link: https://commits.webkit.org/15284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18210 268f45cc-cd09-0410-ab3c-d52691b4dbfc