WebCore/rendering/RenderSVGContainer.h
@@ -94,6 +94,8 @@ public:
     
     AffineTransform viewportTransform() const;
     
+    virtual bool nodeAtPoint(const HitTestRequest&, HitTestResult&, int x, int y, int tx, int ty, HitTestAction);
+
 private:
     void calcViewport(); 
     AffineTransform getAspectRatio(const FloatRect& logical, const FloatRect& physical) const;
